# inferences

./: Cargo.toml  Inferences.i18n.magic.php  README.md  extension.json
dev/: preview.html  smoke-test.js
extension/dev/: preview.html
extension/resources/ext.inferences.diagram/: Graph.js  init.js  styles.css
extension/src/Content/: DiagramContent.php
i18n/: en.json  qqq.json
resources/ext.inferences.diagram/: Graph.js  InferenceText.js  WikiStore.js  init.js  styles.css
src/: Hooks.php  main.rs
src/Content/: DiagramContent.php  DiagramContentHandler.php
