[package]
name = "inferences"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", features = ["persistence", "ron", "serde"] }
egui = { version = "0.34.3", features = ["mint"] }
indexmap = { version = "2.14.0", features = ["serde"] }
mint = { version = "0.5.9", features = ["serde"] }
serde = "1.0.228"
